- added event logs for pivoting, login actions, and pass-the-hash.
- Pass-the-hash dialog is now available via [host] -> Login -> psexec.
- Fixed bug causing Event Log menu to be present outside of collab mode.
- armitage.sh start-up shell script is now named armitage
- Console destroy and shell unlocking commands on tab close now happen in a
  new thread to prevent the GUI from blocking.
  
22 Feb 11 Changes
---------
- Improved shell "when should I read more data from this channel" heuristic. 
  This means command shell sessions should not freeze on an errant Meterp.
  read command that blocks until the universe is recreated.
- Fixed a potential deadlock using Armitage's meterpreter dialogs with a 
  meterpreter tab open.
- Command shell tab now only opens when Armitage knows channel and PID 
  settings
- Rewrote how Armitage interfaces with Meterpreter. This has a few impacts:
  -- Armitage now waits for a command to execute and reads its output
     before executing another command. This prevents Armitage from getting
     confused when you're doing a lot of stuff at once.
  -- You can now open multiple meterpreter console tabs for a session 
  -- Commands executed by Armitage's dialogs will not show up in your 
     Meterpreter tab(s).
- File browser now does a cd "current directory" before each action. 
- Added a network attack collaboration feature to Armitage. This is as 
  beta as it gets (although it *should* work). To use it, start msfrpcd
  and connect Armitage's collaboration server (on the same box as msfrcpd!)

  ./armitage --server host port user pass [ssl? 1 or 0]

  This will connect Armitage's collaboration server to the Metasploit RPC 
  daemon you specify. This server will then bind port+1 and tell future 
  Armitage clients to use it for extra collaboration features.

  Connect one or more remote Armitage clients as normal. Some of the 
  features you get in this mode:

  1. View -> Event Log for chatting and watching major events